# Synthetic_Arbitrage

./: README.md
synthetic-arbitrage/: CMakeLists.txt  file_tree.txt
synthetic-arbitrage/data/: cross_log.csv  eth_synthetic_log.csv  mispricing_ETHUSDT.csv
synthetic-arbitrage/docs/: README.md  architecture.md  finance_report.md  performance_report.md
synthetic-arbitrage/include/: ArbLogger.hpp  ArbOpportunityEngine.hpp  CrossExchangePair.hpp  MispricingBuffer.hpp  MispricingLogger.hpp  MockPnLEngine.hpp  OptionPricer.hpp  SyntheticPair.hpp  SyntheticPerpEngine.hpp  SyntheticSnapshotLogger.hpp  SyntheticSpotSynth.hpp  TradeTick.hpp  bybit_client.hpp
synthetic-arbitrage/libs/websocketpp/common/: thread.hpp
synthetic-arbitrage/reports/: arbitrage_log.csv  summarize_pnl.py
synthetic-arbitrage/src/: CrossExchangePair.cpp  bybit_clean.cpp  main.cpp
synthetic-arbitrage/src/engine/: synthetic_pricing.cpp  synthetic_pricing.hpp
synthetic-arbitrage/src/feeds/: binance_funding_ws.cpp  binance_funding_ws.hpp
synthetic-arbitrage/src/utils/: funding_cache.hpp
